<resources>
    <string name="app_name">CSA</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="grosTexte"><![CDATA[Sed est deceptor nescio quis, summe potens, summe callidus, qui de industriâSed est deceptor nescio quis, summe potens, summe callidus, qui de industriâ me semper fSed est deceptor nescio quis, summe potens, summe callidus, qui de industriâ me semper fSed est deceptor nescio quis, summe potens, summe callidus, qui de industriâ me semper fSed est deceptor nescio quis, summe potens, summe callidus, qui de industriâ me semper fSed est deceptor nescio quis, summe potens, summe callidus, qui de industriâ me semper fSed est deceptor nescio quis, summe potens, summe callidus, qui de industriâ me semper fSed est deceptor nescio quis, summe potens, summe callidus, qui de industriâ me semper fSed est deceptor nescio quis, summe potens, summe callidus, qui de industriâ me semper fSed est deceptor nescio quis, summe potens, summe callidus, qui de industriâ me semper fSed est deceptor nescio quis, summe potens, summe callidus, qui de industriâ me semper fSed est deceptor nescio quis, summe potens, summe callidus, qui de industriâ me semper fSed est deceptor nescio quis, summe potens, summe callidus, qui de industriâ me semper fSed est deceptor nescio quis, summe potens, summe callidus, qui de industriâ me semper fSed est deceptor nescio quis, summe potens, summe callidus, qui de industriâ me semper fSed est deceptor nescio quis, summe potens, summe callidus, qui de industriâ me semper fSed est deceptor nescio quis, summe potens, summe callidus, qui de industriâ me semper f me semper fallit. Haud dubie igitur ego etiam sum, si me fallit; & fallat quantum potest, nunquam tamen efficiet, ut nihil sim quamdiu me aliquid esse cogitabo. Adeo ut, omnibus satis superque pensitatis, denique statuendum sit hoc pronuntiatum, Ego sum, ego existo, quoties a me profertur, vel mente concipitur, necessario esse verum.Sed est deceptor nescio quis, summe potens, summe callidus, qui de industriâ me semper fallit. Haud dubie igitur ego etiam sum, si me fallit; & fallat quantum potest, nunquam tamen efficiet, ut nihil sim quamdiu me aliquid esse cogitabo. Adeo ut, omnibus satis superque pensitatis, denique statuendum sit hoc pronuntiatum, Ego sum, ego existo, quoties a me profertur, vel mente concipitur, necessario esse verum.Sed est deceptor nescio quis, summe potens, summe callidus, qui de industriâ me semper fallit. Haud dubie igitur ego etiam sum, si me fallit; & fallat quantum potest, nunquam tamen efficiet, ut nihil sim quamdiu me aliquid esse cogitabo. Adeo ut, omnibus satis superque pensitatis, denique statuendum sit hoc pronuntiatum, Ego sum, ego existo, quoties a me profertur, vel mente concipitur, necessario esse verum.]]></string>
    <string name="titreARappeler">ERGO SUM</string>
    <string name="action_quit">Quit</string>
    <string name="action_aboutUs">About us</string>
    <string name="welcome_to_wildeas">Welcome to</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="go">Go</string>
    <string name="add">Add</string>
    <string name="textview">TextView</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="deconnexion">Deconnexion</string>
    <string name="titlesubject">titlesubject</string>
    <string name="titlemessage">titlemessage</string>
    <string name="buttonsend">buttonsend</string>
    <string name="SEND">SEND</string>
    <string name="titleSubject">Subject :</string>
    <string name="TitleContent">Content :</string>
    <string name="Content">Content</string>
    <string name="textaboutus">\"nom de l\'application\" is a free application created by passionate for passionate. It allows you to know the release dates of movies, of series and anime directly on his mobile. The community can create cards of their choice and simply share them. Our priority is the quality of the cards and the simplicity of our application.</string>
    <string name="descriptionlogo">logo</string>
    <string name="Type">Mettre ici cinema ou serie ou anime</string>
    <string name="Title">Title</string>
    <string name="title">Title</string>
    <string name="indiquez_film_serie_anime">Indiquez : Film / Serie / Anime</string>
    <string name="login">Login</string>
    <string name="photolauncher">photolauncher</string>
    <string name="portrait">portrait</string>
    <string name="csa">CSA</string>
    <string name="logo">logo</string>
    <string name="add_image">Add image</string>
    <string name="categories">Categorie</string>
    <string name="cinema">Cinéma</string>
    <string name="anime">Anime</string>
    <string name="serie">Série</string>
    <string name="category">Catégorie</string>
</resources>
