<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="horizontal">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="70dp"
            android:layout_height="78dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="34dp"
            android:layout_marginRight="34dp"
            android:padding="7dp"
            android:src="@drawable/idiocracy" />

        <TextView
            android:id="@+id/item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/colorPrimary"
            android:textSize="40dp" />

        <TextView
            android:id="@+id/item_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_title"
            android:layout_marginTop="34dp"
            android:layout_marginBottom="15dp"
            android:text="@string/date"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/item_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_date"
            android:layout_marginTop="34dp"
            android:layout_marginBottom="10dp"
            android:text="@string/description"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp" />
    </RelativeLayout>
</LinearLayout>